第一阶段绘制方块

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Tile game in typescript</title>
+
 </head>
 <body>
 
-    <canvas></canvas>
+    <canvas id="game"></canvas>
 
 </body>
 </html>
+<script src="./ts/main.js"></script>
